--- a/styles/style.css
+++ b/styles/style.css
@@ -89,6 +89,7 @@ body a {
 .secao3 h2 {
     font-size: 2.5em;
     text-align: center;
+    margin-top: 50px;
 }
 
 .secao3 a {
@@ -153,6 +154,7 @@ body a {
     .secao3 h2 {
         font-size: 3em;
         text-align: center;
+        margin-top: 50px;
     }
 
     .secao3 a {
@@ -182,6 +184,7 @@ body a {
     .secao3 h2 {
         font-size: 3.5em;
         text-align: center;
+        margin-top: 50px;
     }
 
     .secao3 a {
@@ -211,6 +214,7 @@ body a {
     .secao3 h2 {
         font-size: 3.5em;
         text-align: center;
+        margin-top: 50px;
     }
 
     .secao3 a {
