--- a/styles/style.css
+++ b/styles/style.css
@@ -178,7 +178,7 @@ body a {
     .secao2 p {
         font-size: 3em;
         text-align: justify;
-        margin-top: 50px;
+        margin-bottom: 50px;
     }
 
     .secao3 h2 {
@@ -208,7 +208,7 @@ body a {
     .secao2 p {
         font-size: 3em;
         text-align: justify;
-        margin-top: 50px;
+        margin-bottom: 50px;
     }
 
     .secao3 h2 {
